# llvm-ir-cmake-utils

./: README.md
cmake/: LLVM-IR-Util.cmake  LLVMIRUtil.cmake  LLVMIRUtilInternal.cmake
example/: CMakeLists.txt
example/include/: bar.hpp
example/src/: CMakeLists.txt  bar.cpp  foo.cpp
example01/: CMakeLists.txt
example01/include/: bar.hpp
example01/include/detail/: bar_impl.hpp
example01/include/general/: general.h
example01/src/: CMakeLists.txt  bar.cpp  foo.cpp
example02/src/: CMakeLists.txt
example03/include/: bar.hpp
example03/src/: CMakeLists.txt  bar.cpp
example04/: CMakeLists.txt  README.txt
example04/executable/: CMakeLists.txt  main.c
example04/staticlib/: CMakeLists.txt
example04/staticlib/include/: Test1.h  Test2.h  Test3.h
example04/staticlib/src/: Test1.c  Test2.c  Test3.c
